2010-12-05 Antonio Gomes <agomes@rim.com>

Reviewed by Ariya Hidayat.

        [Qt] Fix caret browsing navigation mode
        https://bugs.webkit.org/show_bug.cgi?id=50536

        WebKit/qt:

        Caret browsing can consume editing commands even when the start
        of current selection is not a editable content. r69582 missed this
        case because caret browsing feature testing is very poor today.

        This commit reintroduces part of the removed code in r69582 but
        guarded by a isCaretBrowsingEnabled() check. No regression found.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::handleKeyboardEvent):

        LayoutTests:

        /platform/gtk/editing/selection/caret-mode-paragraph-keys-navigation.html
        is one of the few tests actually tests the caret browsing feature.
        Patch makes the test not Gtk+ specific, and Qt now passes on it.

        * editing/selection/caret-mode-paragraph-keys-navigation-expected.txt: Renamed from LayoutTests/platform/gtk/editing/selection/caret-mode-paragraph-keys-navigation-expected.tx       t.
        * editing/selection/caret-mode-paragraph-keys-navigation.html: Renamed from LayoutTests/platform/gtk/editing/selection/caret-mode-paragraph-keys-navigation.html.
        * fast/events/multiline-link-arrow-navigation.html:

Canonical link: https://commits.webkit.org/64576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74229 268f45cc-cd09-0410-ab3c-d52691b4dbfc